--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "axios": "^0.27.2",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-tsparticles": "^2.0.6",
+    "tsparticles": "^2.0.6",
+    "tsparticles-preset-links": "^2.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
